# goletrai

./: .gitignore  README.md  main.py  publish.yml  pyproject.toml
.github/workflows/: publish.yml
example/: ex_update.py  example_video.py
goletrai/: __init__.py  goletor.py  tools.py
goletrai/src/: models.json
