[project]
name = "goletrai"
version = "0.2.4"
description = "Face detection library using ONNX Runtime and Openvino"
authors = [{ name="Hilal", email="mhilalbayuaji@gmail.com" }]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime==1.20.0",
    "opencv-python==4.11.0.86",
    "numpy==2.2.5"
]

[tool.setuptools.packages.find]
where = ["."]
